examples/semantics/errors/error5a.grace
fun error5a () : nothing
{
	strcmp("sdffsd","fsdsfd","Sdfsdf");
}
